# comfy-buildkit

./: .gitignore  README.md  main.py  pyproject.toml
examples/: simple-depends.py  simple-depends.yaml  simple.py
src/comfy_buildkit/: __init__.py  cli.py
src/comfy_buildkit/template/: 10-install-comfy.json  10-install-comfy.py  Dockerfile.template  install-comfy-and-nodes.json  install-comfy-and-nodes.py
src/comfyc/: __init__.py
template/: 10-install-comfy.py  20-install-nodes.json  20-install-nodes.py
