[project]
name = "comfy_buildkit"
version = "0.1.0"
description = "A toolkit for building and customizing ComfyUI Docker images"
authors = [
    { name = "AnyISalIn", email = "anyisalin@gmail.com" }
]
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.1",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/comfy_buildkit"]

[project.scripts]
comfy-buildkit = "comfy_buildkit.cli:main"
